[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/litte_dr.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="LittleDr" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
linear_accel = 5.0
color = Color( 0.980392, 1, 0, 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Line0" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.996078, 1, 0.552941, 1 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
